force-app/main/default/objects/ssot__AuthorizationFormText__dlm/fields/ssot__LocaleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LocaleId__c</fullName>
    <label>Locale</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LocaleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>